# gale-shapley

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  exceptions.py  gs_algorithm.py  main.py  person.py  pyproject.toml  requirements.txt  variable_names.py  zensical.toml
.claude/skills/commit/: SKILL.md
.claude/skills/fix/: SKILL.md
.claude/skills/pr/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/test/: SKILL.md
.cursor/rules/: project.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug.md  2-feature.md  3-docs.md  4-change.md  bug_report.md  config.yml
.github/workflows/: ci.yml  docker-publish.yml  docs.yml  publish.yml  quality.yml  tests.yml
config/: config.yaml  coverage.ini  example_config.yaml  example_config_custom_input.yaml  example_config_random_input.yaml  git-changelog.toml  pytest.ini  ruff.toml
docs/: index.md
docs/reference/: api.md
examples/: basic_usage.py  class_based.py  stability_check.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  defaults.ts  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AnimationPlayer.tsx  CompactPreferenceGrid.tsx  HowItWorksDialog.tsx  PersonList.tsx  PreferenceEditor.tsx  ResultsPanel.tsx  RoundVisualization.tsx  SVGMatchingVisualization.tsx  SortableItem.tsx  SortablePreferenceList.tsx  StabilityBadge.tsx
frontend/src/components/svg/: AnimatedArrow.tsx  PersonNode.tsx
frontend/src/hooks/: usePersonImages.ts
frontend/src/types/: index.ts
src/: algorithm.py  config_parser.py  config_schema.py  create_objects.py  exceptions.py  gs_algorithm.py  main.py  person.py  proposer_responder.py  simulator.py  utils.py
src/gale-shapley/: algorithm.py  config_parser.py  person.py  proposer_responder.py  utils.py
src/gale_shapley/: __init__.py  __main__.py  algorithm.py  cli.py  config.py  config_parser.py  exceptions.py  main.py  matching.py  person.py  proposer_responder.py  result.py  simulator.py  stability.py  utils.py
src/gale_shapley/_api/: app.py  models.py  routes.py  step_through.py
src/gale_shapley/_cli/: app.py  config.py  logging.py  simulator.py
src/gale_shapley_algorithm/: __init__.py  __main__.py  algorithm.py  matching.py  person.py  stability.py
src/gale_shapley_algorithm/_api/: app.py  routes.py  step_through.py
src/gale_shapley_algorithm/_cli/: __init__.py  app.py  display.py  logging.py  prompts.py  simulator.py
tests/: algorithm_test.py  api_test.py  cli_test.py  config_parser_test.py  conftest.py  import_test.py  matching_test.py  person_test.py  simulator_test.py  stability_test.py  utils_test.py
