[project]
name = "gale-shapley"
version = "0.1.0"
description = "A Python implementation of the celebrated Gale-Shapley Algorithm."
authors = [
    {name = "oedokumaci", email = "oral.ersoy.dokumaci@gmail.com"},
]
dependencies = [
    "pdm>=2.5.3",
    "pyyaml>=6.0",
    "pydantic==1.10.13",
    "typer>=0.7.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
[tool.pdm.dev-dependencies]
workflow = [
    "pre-commit>=3.0.4",
]
test = [
    "pytest>=7.2.1",
]

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
