[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gale-shapley"
dynamic = ["version"]
description = "A Python implementation of the celebrated Gale-Shapley Algorithm."
authors = [
    { name = "oedokumaci", email = "oral.ersoy.dokumaci@gmail.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
cli = ["pyyaml>=6.0.1", "pydantic>=2.6.1", "typer>=0.9.0", "rich>=13.0"]
gui = ["fastapi>=0.115", "uvicorn[standard]>=0.30"]
dev = ["gale-shapley[cli]", "pre-commit>=3.0", "ruff>=0.9"]

[project.urls]
Homepage = "https://oedokumaci.github.io/gale-shapley"
Documentation = "https://oedokumaci.github.io/gale-shapley"
Changelog = "https://oedokumaci.github.io/gale-shapley/changelog"
Repository = "https://github.com/oedokumaci/gale-shapley"
Issues = "https://github.com/oedokumaci/gale-shapley/issues"

[tool.hatch.version]
path = "src/gale_shapley/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/gale_shapley"]

[dependency-groups]
test = [
    "pytest>=7.2",
    "pytest-cov>=4.0",
    "pytest-randomly>=3.12",
    "httpx>=0.27",
]
docs = [
    "zensical>=0.0.21",
    "mkdocstrings[python]>=0.29",
    "markdown-exec>=1.8",
    "ghp-import>=2.1",
]

[tool.uv]
default-groups = ["test", "docs"]

# ==============================
# taskipy - Task Runner
# ==============================
# Run tasks with: uvx --from taskipy task <task-name>
# List tasks with: uvx --from taskipy task --list

[tool.taskipy.settings]
use_vars = true

[tool.taskipy.variables]
src = "src"
tests = "tests"
all = "src tests"
module = "gale_shapley"

[tool.taskipy.tasks]
# Module runner
run = { cmd = "uv run python -m {module}", help = "Run module entrypoint" }

# GUI
gui = { cmd = "uv run uvicorn gale_shapley._api.app:app --reload --port 8000", help = "Run GUI dev server" }

# Setup
setup = { cmd = "uv sync --extra cli --extra gui", help = "Install dependencies" }

# Always write changes
format = { cmd = "uvx ruff format --config=config/ruff.toml {all}", help = "Format code (writes changes)" }
lint = { cmd = "uvx ruff check --config=config/ruff.toml --fix {all}", help = "Lint and auto-fix (writes changes)" }

# Convenience: run both
fix = { cmd = "task format && task lint", help = "Format + lint auto-fix" }

# Quality checks (read-only, for CI)
format_check = { cmd = "uvx ruff format --config=config/ruff.toml --check {all}", help = "Check code formatting (CI)" }
lint_check = { cmd = "uvx ruff check --config=config/ruff.toml {all}", help = "Check linting (CI)" }
test = { cmd = "uv run pytest -c config/pytest.ini {tests} --cov={src} --cov-report=html --cov-report=term", help = "Run tests with coverage" }
test_no_cov = { cmd = "uv run pytest -c config/pytest.ini {tests}", help = "Run test suite" }

# CI: all checks in one command (read-only)
ci = { cmd = "task format_check && task lint_check && task test", help = "Run all CI checks (format, lint, test)" }

# Documentation
docs = { cmd = "uv run zensical serve", help = "Serve documentation locally" }
docs_build = { cmd = "uv run zensical build --clean --strict", help = "Build documentation (strict)" }

# Release
changelog = { cmd = "uvx --with 'packaging<26' git-changelog --bump auto -c angular && echo '\nRemember to update __version__ in src/gale_shapley/__init__.py'", help = "Update changelog" }
release = { cmd = "bash -c 'VERSION=$1; if [ -z \"$VERSION\" ]; then echo \"Usage: task release -- X.Y.Z\" && exit 1; fi; if [ -n \"$(git status --porcelain)\" ]; then echo \"Error: Working directory not clean\" && exit 1; fi; git tag v$VERSION && git push origin v$VERSION && gh release create v$VERSION --generate-notes' _", help = "Create a release (usage: task release -- X.Y.Z)" }

# Utilities
pre_commit = { cmd = "uvx pre-commit run --all-files", help = "Run all pre-commit hooks" }
clean = { cmd = "rm -rf build dist htmlcov site .coverage* .pytest_cache .ruff_cache __pycache__ .venvs .venv", help = "Delete build artifacts and caches" }
